I fixed the register button on mobile

--- a/web-flair/app/sass/_media.sass
+++ b/web-flair/app/sass/_media.sass
@@ -691,10 +691,12 @@
 		line-height: 1.65
 
 	.banner-descr__left-code
-		border: none
 		font-size: 12px
-		background-color: #ccebee
 		white-space: nowrap
+
+		.banner-descr__link
+			span 
+				font-size: 12px
 
 	.banner-preview
 		padding: 75px 25px 25px
